--- a/ttrpg-app/package.json
+++ b/ttrpg-app/package.json
@@ -16,7 +16,8 @@
     "react-helmet": "^5.2.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
-    "react-transition-group": "^1.2.1"
+    "react-transition-group": "^1.2.1",
+    "sharp": "^0.25.2"
   },
   "scripts": {
     "start": "webpack-dev-server",
