--- a/ttrpg-app/package.json
+++ b/ttrpg-app/package.json
@@ -13,7 +13,7 @@
     "node-sass": "^4.13.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-helmet": "^5.2.1",
+    "react-helmet-async": "^1.0.5",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "react-transition-group": "^1.2.1",
@@ -22,7 +22,8 @@
   "scripts": {
     "start": "webpack-dev-server",
     "build": "webpack --mode production",
-    "test": "echo \"No tests\" && exit 1"
+    "test": "echo \"No tests\" && exit 1",
+    "lint": "prettier --check ."
   },
   "browserslist": [
     ">0.5%",
@@ -41,13 +42,16 @@
     "@babel/plugin-proposal-class-properties": "^7.8.3",
     "@babel/preset-env": "^7.9.0",
     "@babel/preset-react": "^7.9.4",
+    "@svgr/webpack": "^5.3.1",
     "clean-webpack-plugin": "^3.0.0",
     "favicons-webpack-plugin": "^3.0.1",
     "file-loader": "^6.0.0",
     "html-loader": "^1.1.0",
     "html-webpack-plugin": "^4.0.4",
+    "image-webpack-loader": "^6.0.0",
     "interpolate-html-plugin": "^3.0.0",
     "mini-css-extract-plugin": "^0.9.0",
+    "prettier": "2.0.2",
     "sass-loader": "^8.0.2",
     "webpack": "^4.42.1",
     "webpack-cli": "^3.3.11"
