--- a/ttrpg-app/package.json
+++ b/ttrpg-app/package.json
@@ -4,18 +4,13 @@
   "private": true,
   "dependencies": {
     "@illandril/tabletop-rpg-tools": "file:../library",
-    "@material-ui/core": "^4.9.8",
+    "@material-ui/core": "^4.9.11",
     "@material-ui/icons": "^4.9.1",
-    "@material-ui/styles": "^4.9.6",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.5.0",
-    "@testing-library/user-event": "^7.2.1",
-    "node-sass": "^4.13.1",
+    "@material-ui/styles": "^4.9.10",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-helmet-async": "^1.0.5",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.1",
     "react-transition-group": "^1.2.1",
     "sharp": "^0.25.2"
   },
@@ -23,7 +18,7 @@
     "start": "webpack-dev-server",
     "build": "webpack --mode production",
     "test": "echo \"No tests\" && exit 1",
-    "lint": "prettier --check ."
+    "lint": "eslint ."
   },
   "browserslist": [
     ">0.5%",
@@ -40,20 +35,32 @@
   "devDependencies": {
     "@babel/core": "^7.9.0",
     "@babel/plugin-proposal-class-properties": "^7.8.3",
-    "@babel/preset-env": "^7.9.0",
+    "@babel/preset-env": "^7.9.5",
+    "@babel/preset-flow": "^7.9.0",
     "@babel/preset-react": "^7.9.4",
     "@svgr/webpack": "^5.3.1",
+    "babel-eslint": "^10.1.0",
+    "babel-loader": "^8.1.0",
     "clean-webpack-plugin": "^3.0.0",
+    "css-loader": "^3.5.2",
+    "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.10.1",
+    "eslint-config-react-app": "^5.2.1",
+    "eslint-plugin-flowtype": "^4.7.0",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-prettier": "^3.1.3",
+    "eslint-plugin-react": "^7.19.0",
+    "eslint-plugin-react-hooks": "^3.0.0",
     "favicons-webpack-plugin": "^3.0.1",
     "file-loader": "^6.0.0",
     "html-loader": "^1.1.0",
-    "html-webpack-plugin": "^4.0.4",
+    "html-webpack-plugin": "^4.2.0",
     "image-webpack-loader": "^6.0.0",
-    "interpolate-html-plugin": "^3.0.0",
     "mini-css-extract-plugin": "^0.9.0",
     "prettier": "2.0.2",
-    "sass-loader": "^8.0.2",
-    "webpack": "^4.42.1",
-    "webpack-cli": "^3.3.11"
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.10.3"
   }
 }
